[gd_scene load_steps=16 format=2]

[ext_resource path="res://sound/effects/shot.wav" type="AudioStream" id=1]
[ext_resource path="res://graphics/homespun.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://graphics/UI/SliderPinSelected.png" type="Texture" id=3]
[ext_resource path="res://graphics/UI/SliderPin.png" type="Texture" id=4]
[ext_resource path="res://graphics/UI/Slider.png" type="Texture" id=5]
[ext_resource path="res://graphics/UI/Button.png" type="Texture" id=6]
[ext_resource path="res://graphics/UI/Button Hover.png" type="Texture" id=7]
[ext_resource path="res://graphics/UI/Button Clicked.png" type="Texture" id=8]
[ext_resource path="res://graphics/UI/Button Disabled.png" type="Texture" id=9]
[ext_resource path="res://Settings.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 130, 16 )
margin_left = 18.4873
margin_right = 19.3276

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Control" parent="Sound"]
margin_left = 96.0
margin_right = 416.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sound/Music"]
margin_left = 44.0
margin_right = 188.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Music Volume"
valign = 1

[node name="MusicSlider" type="HSlider" parent="Sound/Music"]
margin_left = 32.0
margin_top = 36.0
margin_right = 288.0
margin_bottom = 52.0
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -80.0
max_value = 0.0

[node name="Effects" type="Control" parent="Sound"]
margin_left = 96.0
margin_top = 68.0
margin_right = 416.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sound/Effects"]
margin_left = 44.0
margin_right = 188.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Sound Effects Volume"
valign = 1

[node name="EffectsSlider" type="HSlider" parent="Sound/Effects"]
margin_left = 32.0
margin_top = 36.0
margin_right = 288.0
margin_bottom = 52.0
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -80.0
max_value = 0.0

[node name="SoundEffectDemo" type="AudioStreamPlayer" parent="Sound/Effects"]
stream = ExtResource( 1 )
bus = "Effects"

[node name="SettingsBack" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -68.0
margin_top = 196.0
margin_right = 62.0
margin_bottom = 244.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBack"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Sound/Music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Sound/Effects/EffectsSlider" to="." method="_on_EffectsSlider_value_changed"]
[connection signal="pressed" from="SettingsBack" to="." method="_on_SettingsBack_pressed"]
